log
Sun Oct 25 17:15:24 UTC 2020: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:37:14: error: unused variable ‘newArray’ [-Werror=unused-variable]
   heapElem * newArray= (heapElem*) malloc (3 * sizeof (heapElem));
              ^~~~~~~~
heap.c:38:14: error: ‘nHeap’ is used uninitialized in this function [-Werror=uninitialized]
   nHeap->size= 0;
   ~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
Sun Oct 25 17:17:33 UTC 2020: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
test.c: In function ‘createHeap’:
heap.c:37:19: error: ‘nHeap’ is used uninitialized in this function [-Werror=uninitialized]
   nHeap->heapArray= (heapElem*) malloc (3 * sizeof (heapElem));
   ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
Sun Oct 25 17:18:12 UTC 2020: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
491e069
Sun Oct 25 17:18:18 UTC 2020: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|3
total_score: 10/70
9ceaab2
Sun Oct 25 17:23:24 UTC 2020: 
 heap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
1122d1a
Sun Oct 25 17:25:17 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
b9d1165
Sun Oct 25 17:26:16 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
98e3a6c
Sun Oct 25 17:26:35 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
890bb83
Sun Oct 25 17:26:56 UTC 2020: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
6c9449a
Sun Oct 25 17:28:23 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
38fe52c
Sun Oct 25 19:50:45 UTC 2020: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
58e9edd
Sun Oct 25 20:17:32 UTC 2020: 
 heap.c | 24 ++++++++++++++++++++++--
 1 file changed, 22 insertions(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
30b2072
Sun Oct 25 20:22:09 UTC 2020: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
3ba873a
Sun Oct 25 20:25:46 UTC 2020: 
 heap.c | 36 ++++++++++++++++++------------------
 1 file changed, 18 insertions(+), 18 deletions(-)
 tests:  2|2
total_score: 20/70
d57b123
Sun Oct 25 20:29:48 UTC 2020: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
08952ca
Sun Oct 25 20:29:55 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
512d064
Sun Oct 25 20:31:28 UTC 2020: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
44156d8
Sun Oct 25 20:33:27 UTC 2020: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|2
total_score: 35/70
f243ef6
Sun Oct 25 20:34:08 UTC 2020: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
a68683b
Sun Oct 25 21:48:15 UTC 2020: 
 heap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 50/70
8aeb0ca
Sun Oct 25 21:52:51 UTC 2020: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 50/70
02e95dd
Sun Oct 25 21:55:16 UTC 2020: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
d65001d
Sun Oct 25 21:55:35 UTC 2020: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
95659a5
Sun Oct 25 21:58:10 UTC 2020: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
778dba3
Sun Oct 25 22:04:35 UTC 2020: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 50/70
bd73dc8
Sun Oct 25 22:19:04 UTC 2020: 
 heap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  0|0
c7c68cc
Sun Oct 25 22:20:11 UTC 2020: 
 heap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
free(): invalid pointer
free(): invalid pointer
 tests:  0|0
free(): invalid pointer
c2c434e
Sun Oct 25 22:22:04 UTC 2020: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 50/70
4776b13
Sun Oct 25 22:24:36 UTC 2020: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
free(): invalid pointer
free(): invalid pointer
 tests:  0|0
free(): invalid pointer
cba6900
Sun Oct 25 22:24:50 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
5c37ac2
Sun Oct 25 22:28:42 UTC 2020: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
7f57318
Sun Oct 25 22:54:07 UTC 2020: 
 heap.c | 32 ++++++++++++++++++++++----------
 1 file changed, 22 insertions(+), 10 deletions(-)
 tests:  7|1
total_score: 50/70
f7daa5d
Sun Oct 25 22:54:55 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 50/70
29fa839
Sun Oct 25 22:55:39 UTC 2020: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 50/70
63ced1a
Sun Oct 25 22:57:18 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 50/70
559366f
Sun Oct 25 23:08:30 UTC 2020: 
 heap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  7|1
total_score: 45/70
27dcc70
Sun Oct 25 23:09:12 UTC 2020: 
 heap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  7|1
total_score: 45/70
b00b00e
Sun Oct 25 23:10:24 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
0ffd034
Sun Oct 25 23:14:26 UTC 2020: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
9a3cc5c
Sun Oct 25 23:17:59 UTC 2020: 
 heap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  7|1
total_score: 45/70
9fa55df
